# purequery

./: CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
docs/: adr.md  design.md  learnings.md
docs/features/20260619202258-layout/: plan.md  spec.md
docs/features/20260619214347-workbench/: plan.md  spec.md
docs/features/20260620002936-command-palette/: plan.md  spec.md
docs/features/20260620005727-db-connect-tables/: plan.md  spec.md
docs/features/20260620171307-settings-json-persistence/: plan.md  spec.md
docs/features/20260620232055-add-db-folder-commands/: plan.md  spec.md
docs/features/20260621024638-sqlite-engine/: plan.md  spec.md
docs/features/20260621110047-mock-cleanup-adt/: plan.md  spec.md
docs/features/20260621122534-grid-results-browsing/: plan.md  spec.md
docs/features/20260621164824-row-mutations/: plan.md  spec.md
docs/features/20260621190853-sql-editor/: plan.md  spec.md
docs/features/20260625223847-file-logging/: plan.md  spec.md  status.md
docs/features/20260626171226-per-db-saved-sql-scripts/: plan.md  spec.md
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: backup.rs  db.rs  dynamo.rs  lib.rs  logging.rs  mongo.rs  mssql.rs
src/app/: providers.tsx
src/lib/: browser-defaults.ts  export.ts  tauri.ts
src/routes/: __root.tsx  index.tsx  settings.tsx
src/test/: query-wrapper.tsx  setup.ts
test-stack/: README.md  docker-compose.yml
tests/e2e/: bootstrap.spec.tsx
(+309 files in other folders)
